# sdk-python

./: .clomonitor.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  MANIFEST.in  MIGRATION.md  Makefile  OWNERS  README.md  RELEASING.md  circle.yml  mypy.ini  pypi_packaging.py  pyproject.toml  release.sh  release_doc.md  requirement.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  v2-roadmap.md
.github/: ISSUE_TEMPLATE  ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: main.yml  pypi-release.yml
cloudevents/: __init__.py  conversion.py  exceptions.py
cloudevents/abstract/: __init__.py  event.py  http_methods.py  json_methods.py
cloudevents/generic/: __init__.py  http_methods.py  json_methods.py
cloudevents/http/: __init__.py  conversion.py  event.py  event_type.py  http_methods.py  json_methods.py  mappings.py  util.py
cloudevents/kafka/: __init__.py  conversion.py  event.py  exceptions.py
cloudevents/proto/: __init__.py  cloudevents_pb2.py  cloudevents_pb2.pyi
cloudevents/pydantic/: __init__.py  conversion.py  event.py  fields_docs.py
cloudevents/pydantic/pydantic_v1/: conversion.py  event.py
cloudevents/pydantic/pydantic_v2/: conversion.py  event.py
cloudevents/pydantic/v1/: __init__.py  conversion.py  event.py
cloudevents/pydantic/v2/: __init__.py  conversion.py  event.py
cloudevents/sdk/: __init__.py  exceptions.py  http_events.py  marshaller.py  types.py
cloudevents/sdk/converters/: __init__.py  base.py  binary.py  structured.py  util.py
cloudevents/sdk/event/: abstract_event.py  attribute.py  base.py  opt.py  upstream.py  v01.py  v02.py  v03.py  v1.py
cloudevents/sdk/http/: __init__.py  binary.py  event.py  structured.py
cloudevents/tests/: data.py  test_abstract_cloudevent.py  test_backwards_compatability.py  test_base_events.py  test_converters.py  test_data_encaps_refs.py  test_deprecated_functions.py  test_event_converter.py  test_event_extensions.py  test_event_from_request_converter.py  test_event_pipeline.py  test_event_to_request_converter.py  test_generic_cloudevent.py  test_http_cloudevent.py  test_http_cloudevent_overrides.py  test_http_conversions.py  test_http_events.py  test_http_json_methods.py  test_kafka_conversions.py  test_marshaller.py  test_options.py  test_pydantic_cloudevent.py  test_pydantic_conversions.py  test_pydantic_events.py  test_v03_event.py  test_v1_event.py  test_with_sanic.py
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
etc/docs_conf/: conf.py
requirements/: constraints.txt  dev.txt  docs.txt  mypy-constraints.txt  mypy.txt  publish.txt  test.txt
samples/http-cloudevents/: README.md  client.py  server.py
samples/http-image-cloudevents/: README.md  client.py  http_image_client.py  image_sample_server.py  image_sample_test.py  requirements.txt  server.py  test_image_sample.py
samples/http-json-cloudevents/: README.md  client.py  http_json_client.py  json_sample_server.py  json_sample_test.py  requirements.txt  server.py  test_verify_sample.py
samples/python-event-requests/: cloudevent_to_request.py  sample-server.py
samples/python-pika/: cloudevent_to_pika.py  pika_to_cloudevent.py
samples/python-requests/: cloudevent_to_request.py  request_to_cloudevent.py
src/cloudevents/: __init__.py
src/cloudevents/core/: __init__.py  base.py  exceptions.py  spec.py
src/cloudevents/core/bindings/: __init__.py  amqp.py  common.py  http.py  kafka.py  rabbitmq.py
src/cloudevents/core/formats/: base.py  json.py
src/cloudevents/core/v03/: __init__.py  event.py
src/cloudevents/core/v1/: __init__.py  event.py  exceptions.py
src/cloudevents/v1/: __init__.py  conversion.py
src/cloudevents/v1/abstract/: __init__.py
src/cloudevents/v1/http/: __init__.py  conversion.py  event.py  event_type.py  http_methods.py  json_methods.py  util.py
src/cloudevents/v1/kafka/: __init__.py  conversion.py  exceptions.py
src/cloudevents/v1/pydantic/: __init__.py  fields_docs.py
src/cloudevents/v1/sdk/: exceptions.py  marshaller.py  types.py
src/cloudevents/v1/tests/: data.py  test_backwards_compatability.py  test_base_events.py  test_converters.py  test_options.py  (+17 more)
tests/test_cloudevents/: test_cloudevents_version.py
tests/test_core/test_bindings/: test_amqp.py  test_http.py  test_kafka.py  test_rabbitmq.py
tests/test_core/test_format/: test_json.py
tests/test_core/test_v03/: __init__.py  test_event.py  test_http_bindings.py  test_json_format.py
tests/test_core/test_v1/: test_event.py
tests/test_v1_compat/: __init__.py  conftest.py  data.py  test_backwards_compatability.py  test_base_events.py  test_converters.py  test_data_encaps_refs.py  test_deprecated_functions.py  test_event_extensions.py  test_event_from_request_converter.py  test_event_pipeline.py  test_event_to_request_converter.py  test_http_cloudevent.py  test_http_conversions.py  test_http_events.py  test_kafka_conversions.py  test_marshaller.py  test_options.py  test_pydantic_cloudevent.py  test_pydantic_conversions.py  test_pydantic_events.py  test_v03_event.py  test_v1_event.py  test_with_sanic.py
(+16 files in other folders)
