[metadata]
name = cloudevents
summary = CloudEvents SDK Python
description-file =
    README.md
author = Denis Makogon
author-email = denys.makogon@oracle.com
home-page = https://cloudevents.io/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    cloudevents

[global]
setup-hooks =
    pbr.hooks.setup_hook
