[metadata]
name = cloudevents
summary = CloudEvents SDK Python
description-file =
    README.md
long-description-content-type = text/markdown
author = The Cloud Events Contributors
author-email = cncfcloudevents@gmail.com
home-page = https://cloudevents.io/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    cloudevents
